--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Spring boot
 spring.application.name=picpay-desafio
 spring.datasource.url=jdbc:mysql://localhost:3306/picpay?serverTimezone=UTC
 spring.datasource.username=user
@@ -5,9 +6,24 @@ spring.datasource.password=picpayPass2025
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+
 server.port= 9090
 
+# Swagger
 springdoc.api-docs.path=/api-docs
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=
-spring.security.oauth2.resourceserver.jwt.audiences=
+# Jwt
+spring.security.oauth2.resourceserver.jwt.issuer-uri= https://idp.example.com/issuer
+spring.security.oauth2.resourceserver.jwt.audiences= https://my-resource-server.example.com
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://idp.example.org/.well-known/jwks.json
+
+# Keys
+# spring.security.oauth2.resourceserver.jwt.public-key-location=
+
+# Spring mail starter
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=<login password to smtp server>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
